<?xml version="1.0" encoding="utf-8"?>
<!--android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.francesco.rotations.MainActivity"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/textView"
        android:layout_width="386dp"
        android:layout_height="69dp"
        android:text="@string/label_welcome" />
    <Button
        android:id="@+id/button_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_name"
        android:id="@+id/editText"/>
    <!--EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/insert_name"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="234dp" /-->

<!--/android.support.constraint.ConstraintLayout-->
</LinearLayout>
